--- a/ui_construction/WP71Demo/MainPage.xaml
+++ b/ui_construction/WP71Demo/MainPage.xaml
@@ -35,14 +35,14 @@
                 </Grid.RowDefinitions>
                 <StackPanel Margin="50,442,0,192" VerticalAlignment="Center" HorizontalAlignment="Center"></StackPanel>
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.Button3}" VerticalAlignment="Top" Margin="33,413,0,0" Width="167" Name="passwordText" />
-                <TextBox Name="passwordBox" TextWrapping="Wrap" Margin="33,442,32,115" Text="{Binding Path=AppResources.passwdBox, Mode=TwoWay, Source={StaticResource LocalizedStrings}}" />
-                <TextBox Height="72" HorizontalAlignment="Left" Margin="33,335,0,0" Name="usernameBox" Text="{Binding Path=AppResources.usernameBox, Mode=TwoWay, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Top" Width="390" TextChanged="textBox1_TextChanged" />
+                <TextBox Name="passwordBox" TextWrapping="Wrap" Margin="33,0,32,115" Text="{Binding Path=AppResources.passwdBoxString, Mode=TwoWay, Source={StaticResource LocalizedStrings}}" Height="77" VerticalAlignment="Bottom" GotFocus="passwordBox_GotFocus" />
+                <TextBox Height="72" HorizontalAlignment="Left" Margin="33,335,0,0" Name="usernameBox" VerticalAlignment="Top" Width="390" Text="{Binding Path=AppResources.usernameBoxString, Mode=TwoWay, Source={StaticResource LocalizedStrings}}" GotFocus="usernameBox_GotFocus" />
                 <TextBlock Height="30" HorizontalAlignment="Left" Margin="33,295,0,0" Name="textBlock1" Text="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.usernameString}" VerticalAlignment="Top" />
                 <TextBlock Height="30" HorizontalAlignment="Left" Margin="33,410,0,0" Name="textBlock2" Text="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.passwdString}" VerticalAlignment="Top" />
-                <Button Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.loginBox}" Height="72" HorizontalAlignment="Left" Margin="280,541,0,0" Name="button1" VerticalAlignment="Top" Width="160" />
-                <RadioButton Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.publicRadio}" Height="72" HorizontalAlignment="Left" Margin="33,53,0,0" Name="radioButton1" VerticalAlignment="Top" IsChecked="True" />
-                <RadioButton Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.privateRadio}" Height="72" HorizontalAlignment="Left" Margin="33,131,0,0" Name="radioButton2" VerticalAlignment="Top" />
-                <CheckBox Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.lightCheck}" Height="72" HorizontalAlignment="Left" Margin="33,209,0,0" Name="checkBox1" VerticalAlignment="Top" />
+                <Button Height="72" HorizontalAlignment="Left" Margin="280,541,0,0" Name="loginButton" VerticalAlignment="Top" Width="160" Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.loginBoxString}" Click="loginButton_Click" />
+                <RadioButton Height="72" HorizontalAlignment="Left" Margin="33,53,0,0" Name="publicRadioSel" VerticalAlignment="Top" IsChecked="True" FontSize="18" Width="347" GroupName="asdf" Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.publicRadioString}" />
+                <RadioButton Height="72" HorizontalAlignment="Left" Margin="33,0,0,431" Name="privateRadioSel" VerticalAlignment="Bottom" FontSize="18" Width="347" Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.privateRadioString}" />
+                <CheckBox Height="72" HorizontalAlignment="Left" Margin="33,0,0,353" Name="liteCheckBox" VerticalAlignment="Bottom" FontSize="19" Width="347" Content="{Binding Source={StaticResource LocalizedStrings}, Path=AppResources.lightCheckString}" />
             </Grid>
            
         </Grid>
