--- a/WhatsTheWeatherLikeApp/WeatherPage.xaml
+++ b/WhatsTheWeatherLikeApp/WeatherPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="WhatsTheWeatherLikeApp.MainPage"
+    x:Class="WhatsTheWeatherLikeApp.WeatherMainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -11,7 +11,7 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True" Name="WeatherPage">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -22,12 +22,19 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="ApplicationTitle" Text="WtWL" Style="{StaticResource PhoneTextNormalStyle}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0"></Grid>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="227*" />
+                <ColumnDefinition Width="229*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock x:Name="PageTitle" Text="Tell me whats the weather like in.." Margin="6,6,6,410" Style="{StaticResource PhoneTextTitle1Style}" Grid.ColumnSpan="2" FontSize="65" TextWrapping="Wrap" />
+            <TextBox Height="72" HorizontalAlignment="Left" Margin="0,328,0,0" Name="citySearchBox" Text="city name" VerticalAlignment="Top" Width="460" Grid.ColumnSpan="2" Foreground="#3A000000" GotFocus="citySearchBox_GotFocus" />
+            <Button Content="Tell Me" Height="72" HorizontalAlignment="Left" Margin="153,446,0,0" Name="searchButton" VerticalAlignment="Top" Width="160" Grid.ColumnSpan="2" Click="searchButton_Click" />
+        </Grid>
     </Grid>
  
     <!--Sample code showing usage of ApplicationBar-->
