--- a/WhatsTheWeatherLikeApp/WeatherInfoPage.xaml
+++ b/WhatsTheWeatherLikeApp/WeatherInfoPage.xaml
@@ -27,7 +27,9 @@
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0"></Grid>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Button Content="Back" Height="72" HorizontalAlignment="Left" Margin="9,433,0,0" Name="backButton" VerticalAlignment="Top" Width="160" Click="backButton_Click" />
+        </Grid>
     </Grid>
  
     <!--Sample code showing usage of ApplicationBar-->
