--- a/WhatsTheWeatherLikeApp/WeatherInfoPage.xaml
+++ b/WhatsTheWeatherLikeApp/WeatherInfoPage.xaml
@@ -22,12 +22,17 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="WtWL" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="..the weather is like" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" TextWrapping="Wrap" />
+            <TextBlock x:Name="ApplicationTitle" Text="WtWL" Style="{StaticResource PhoneTextNormalStyle}" Height="89" Width="454" />
+            <TextBlock Height="73" Name="cityTextBlock" Text="default text" FontSize="30" Width="466" />
+            <TextBlock x:Name="PageTitle" Text="..the weather is like" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" TextWrapping="Wrap" Height="223" />
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="203*" />
+                <ColumnDefinition Width="253*" />
+            </Grid.ColumnDefinitions>
             <Button Content="Back" Height="72" HorizontalAlignment="Left" Margin="9,433,0,0" Name="backButton" VerticalAlignment="Top" Width="160" Click="backButton_Click" />
         </Grid>
     </Grid>
